--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>WebStudio</title>
   </head>
 <body>
-  <header class="menu">
+  <header class="menu container">
       <nav class="menu-nav">
         <ul class="menu-list">
           <li class="list"><a class="logo" href="index.html">Web</a><a class="logo-st" href="index.html">Studio</a></li>
