--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
     </ul>
   </main>
   <footer class="footer">
-    <a href="index.html" class="logo"><a class="logo">Web</a><a class="logo-sta">Studio</a></a>
+    <div href="index.html" class="footer-logo"><a class="logo">Web<a class="logo-sta">Studio</a></a></div>
     <address class="adress">
-      <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-      <a href="mailto:info@example.com">info@example.com</a><br>
-      <a href="tel:+48111111111">Telefon: +48 111 111 111</a>
+      <p class="company-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
+      <a href="mailto:info@example.com" class="footer-mail">info@example.com</a><br>
+      <a href="tel:+48111111111" class="footer-tel">Telefon: +48 111 111 111</a>
     </address>
   </footer>
 </body>
