--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   <title>WebStudio</title>
 </head>
 
-<body>
+<body class="body-portfolio">
   <header class="menu container">
     <nav class="menu-nav">
       <ul class="menu-list">
@@ -91,14 +91,14 @@
   </li>
 </ul>
 </main>
-<footer class="footer-portfolio">
-  <a href="index.html" class="logo"><a class="logo">Web</a><a class="logo-sta">Studio</a></a>
-  <address class="adress">
-    <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-    <a href="mailto:info@example.com">info@example.com</a><br>
-    <a href="tel:+48111111111">Telefon: +48 111 111 111</a>
-  </address>
-</footer>
+  <footer class="footer-portfolio">
+    <div href="index.html" class="footer-logo"><a class="logo">Web<a class="logo-sta">Studio</a></a></div>
+    <address class="adress">
+      <p class="company-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
+      <a href="mailto:info@example.com" class="footer-mail">info@example.com</a><br>
+      <a href="tel:+48111111111" class="footer-tel">Telefon: +48 111 111 111</a>
+    </address>
+  </footer>
 </body>
 
 </html>
