--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>WebStudio</title>
   </head>
 <body>
-  <header class="menu container">
+  <header class="menu">
       <nav class="menu-nav">
         <ul class="menu-list">
           <li class="list"><a class="logo" href="index.html">Web</a><a class="logo-st" href="index.html">Studio</a></li>
@@ -24,8 +24,11 @@
       </nav>
   </header>
   <main class="main">
-    <h1 class="main-order-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+    <div class="div-order container">
+      <h1 class="main-order-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
     <button class="main-order-button"><p class="main-order-button-content">Zamów usługe</p></button>
+    </div>
+    
     <ul class="stats">
       <li class="stats-list">
         <h3>LOREM IPSUM</h3>
@@ -48,6 +51,8 @@
           malesuada</p>
       </li>
     </ul>
+
+    
     <h2 class="jobs-title">Czym się zajmujemy</h2>
     <ul class="jobs">
       <li class="jobs-list">
