--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
       </nav>
   </header>
   <main class="main">
-    <div class="div-order container">
+    <section class="main-order-section">
       <h1 class="main-order-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-    <button class="main-order-button"><p class="main-order-button-content">Zamów usługe</p></button>
-    </div>
-    
+      <button class="main-order-button">
+        <p class="main-order-button-content">Zamów usługe</p>
+      </button>
+    </section>
+    <section class="stats-section"></section>
     <ul class="stats">
       <li class="stats-list">
         <h3>LOREM IPSUM</h3>
@@ -51,8 +53,8 @@
           malesuada</p>
       </li>
     </ul>
-
-    
+    </section>
+    <section class="jobs-section"></section>
     <h2 class="jobs-title">Czym się zajmujemy</h2>
     <ul class="jobs">
       <li class="jobs-list">
@@ -65,6 +67,8 @@
         <img src="images/jobs/jobimage3.jpg" alt="UI" class="jobs-image">
       </li>
     </ul>
+    </section>
+    <section class="team-section">
     <h2 class="team-title">Nasz Zespół</h2>
     <ul class="team">
       <li class="team-list">
@@ -88,13 +92,16 @@
         <p class="team-text-content">UI Designer</p>
       </li>
     </ul>
+    </section>
   </main>
   <footer class="footer">
     <div href="index.html" class="footer-logo"><a class="logo">Web<a class="logo-sta">Studio</a></a></div>
     <address class="adress">
+      <section>
       <p class="company-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
       <a href="mailto:info@example.com" class="footer-mail">info@example.com</a><br>
       <a href="tel:+48111111111" class="footer-tel">Telefon: +48 111 111 111</a>
+      </section>
     </address>
   </footer>
 </body>
