--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p class="main-order-button-content">Zamów usługe</p>
       </button>
     </section>
-    <section class="stats-section"></section>
+    <section class="stats-section">
     <ul class="stats">
       <li class="stats-list">
         <h3>LOREM IPSUM</h3>
@@ -54,7 +54,7 @@
       </li>
     </ul>
     </section>
-    <section class="jobs-section"></section>
+    <section class="jobs-section">
     <h2 class="jobs-title">Czym się zajmujemy</h2>
     <ul class="jobs">
       <li class="jobs-list">
