--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
 <body>
   <header class="menu">
+    <div class="container">
       <nav class="menu-nav">
         <ul class="menu-list">
           <li class="list"><a class="logo" href="index.html">Web</a><a class="logo-st" href="index.html">Studio</a></li>
@@ -22,15 +23,19 @@
           <li class="list"><a href="mailto:info@devstudio.com" class="header-mail">Mail: info@devstudio.com</a></li>
         </ul>
       </nav>
+    </div>
   </header>
   <main class="main">
     <section class="main-order-section">
-      <h1 class="main-order-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-      <button class="main-order-button">
-        <p class="main-order-button-content">Zamów usługe</p>
-      </button>
+      <div class="container center">
+        <h1 class="main-order-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <button class="main-order-button">
+          <p class="main-order-button-content">Zamów usługe</p>
+        </button>
+      </div>
     </section>
     <section class="stats-section">
+    <div class="container">
     <ul class="stats">
       <li class="stats-list">
         <h3>LOREM IPSUM</h3>
@@ -53,8 +58,10 @@
           malesuada</p>
       </li>
     </ul>
+    </div>
     </section>
     <section class="jobs-section">
+    <div class="container center">
     <h2 class="jobs-title">Czym się zajmujemy</h2>
     <ul class="jobs">
       <li class="jobs-list">
@@ -67,8 +74,10 @@
         <img src="images/jobs/jobimage3.jpg" alt="UI" class="jobs-image">
       </li>
     </ul>
+    </div>
     </section>
     <section class="team-section">
+    <div class="container center">
     <h2 class="team-title">Nasz Zespół</h2>
     <ul class="team">
       <li class="team-list">
@@ -92,17 +101,20 @@
         <p class="team-text-content">UI Designer</p>
       </li>
     </ul>
+    </div>
     </section>
   </main>
   <footer class="footer">
+    <section>
+    <div class="container">
     <div href="index.html" class="footer-logo"><a class="logo">Web<a class="logo-sta">Studio</a></a></div>
     <address class="adress">
-      <section>
       <p class="company-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
       <a href="mailto:info@example.com" class="footer-mail">info@example.com</a><br>
       <a href="tel:+48111111111" class="footer-tel">Telefon: +48 111 111 111</a>
-      </section>
     </address>
+    </div>
+    </section>
   </footer>
 </body>
 </html>
