--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,8 @@
 </head>
 
 <body class="body-portfolio">
-  <header class="menu container">
+  <header class="menu">
+    <div class="container">
     <nav class="menu-nav">
       <ul class="menu-list">
         <li class="list"><a class="logo" href="index.html">Web</a><a class="logo-st" href="index.html">Studio</a></li>
@@ -24,25 +25,29 @@
         <li class="list"><a href="mailto:info@devstudio.com" class="header-mail">Mail: info@devstudio.com</a></li>
       </ul>
     </nav>
+  </div>
   </header>
-<main>
-<ul class="filters">
-  <li class="filter-object">
-    <button class="filter-button-active">Wszystkie</button>
-  </li>
-  <li class="filter-object">
-    <button class="filter-button">Strony</button>
-  </li>
-  <li class="filter-object">
-    <button class="filter-button">Aplikacje</button>
-  </li>
-  <li class="filter-object">
-    <button class="filter-button">Dizajn</button>
-  </li>
-  <li class="filter-object">
-    <button class="filter-button">Marketing</button>
-  </li>
-</ul>
+<main class="main">
+  <div class="container">
+    <ul class="filters">
+      <li class="filter-object">
+        <button class="filter-button">Wszystkie</button>
+      </li>
+      <li class="filter-object">
+        <button class="filter-button">Strony</button>
+      </li>
+      <li class="filter-object">
+        <button class="filter-button">Aplikacje</button>
+      </li>
+      <li class="filter-object">
+        <button class="filter-button">Dizajn</button>
+      </li>
+      <li class="filter-object">
+        <button class="filter-button">Marketing</button>
+      </li>
+    </ul>
+  </div>
+<div class="container">
 <ul class="projects">
   <li class="project-object">
     <img src="images/projects/projectimage1.jpg" alt="Technocrack">
@@ -90,14 +95,17 @@
     <p class="project-filter">Aplikacja</p>
   </li>
 </ul>
+</div>
 </main>
   <footer class="footer-portfolio">
+    <div class="container">
     <div href="index.html" class="footer-logo"><a class="logo">Web<a class="logo-sta">Studio</a></a></div>
     <address class="adress">
       <p class="company-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
       <a href="mailto:info@example.com" class="footer-mail">info@example.com</a><br>
       <a href="tel:+48111111111" class="footer-tel">Telefon: +48 111 111 111</a>
     </address>
+  </div>
   </footer>
 </body>
 
