--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     </section>
     <section class="jobs-section">
-    <div class="container center">
+    <div class="container">
     <h2 class="jobs-title">Czym się zajmujemy</h2>
     <ul class="jobs">
       <li class="jobs-list">
@@ -77,7 +77,7 @@
     </div>
     </section>
     <section class="team-section">
-    <div class="container center">
+    <div class="container">
     <h2 class="team-title">Nasz Zespół</h2>
     <ul class="team">
       <li class="team-list">
